# CellVision-QC

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: run_demo.sh
notebooks/: demo.ipynb
src/cellvision_qc/: __init__.py  cli.py  preprocessing.py
src/cellvision_qc/features/: __init__.py  extraction.py
src/cellvision_qc/metrics/: __init__.py  qc.py
src/cellvision_qc/phenotype/: __init__.py  analysis.py
src/cellvision_qc/segmentation/: __init__.py  base.py  cellpose_adapter.py  cellprofiler_adapter.py  threshold.py  watershed.py
src/cellvision_qc/visualization/: __init__.py  plots.py
tests/: conftest.py  test_features.py  test_metrics.py  test_phenotype.py  test_preprocessing.py  test_segmentation.py  test_synthetic.py
